<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/frame_margin">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_picture_height"
            android:contentDescription="@string/content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/electricity" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="serif-monospace"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="@dimen/call_button_size"
            android:layout_height="@dimen/call_button_size"
            android:background="@drawable/call_button"
            android:onClick="dial"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/slogan_margin"
            android:layout_marginStart="@dimen/slogan_margin"
            android:text="@string/care"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/slogan_text_size" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/adress"
            android:gravity="start"
            android:text="@string/name"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="@dimen/info_text_size" />

        <TextView
            android:id="@+id/adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="start|bottom"
            android:text="@string/adress"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="@dimen/info_text_size" />
    </RelativeLayout>
</LinearLayout>